Fix the overlapping with legend and timestamp

--- a/Display_map_in_full_screen_for_X-RAIN.user.css
+++ b/Display_map_in_full_screen_for_X-RAIN.user.css
@@ -14,7 +14,7 @@
   #legendPanel1 {
     top: initial !important;
     left: initial !important;
-    bottom: 255px !important;
+    bottom: 270px !important;
     right: 80px !important;
   }
   #mapDate {
